--- a/src/res/css/base.scss
+++ b/src/res/css/base.scss
@@ -13,20 +13,27 @@ body {
     color:#333;
     font-family: 'Noto Sans KR', sans-serif;
     padding:2vw;
-    background: #f9f9f9;
+    background: #f8f9fb;
     line-height: 1.3;
 }
 
 input,
 select,
 textarea {
+    font-size:0.9em;
     font-family: inherit;
-    border:1px solid #ccc;   
+    border:1px solid #ccc;
+    max-width:100%;   
 }
 
 input {
-    height:3em;
-    padding:1em;
+    height:2.5em;
+    padding:0 1em;
+}
+
+select {
+    height:2.5em;
+    padding:0 2em 0 1em;
 }
 
 button {
@@ -45,9 +52,94 @@ ol {
     list-style: none;
 }
 
+a {
+    font-size: initial;
+    text-decoration: none;
+    color:initial;
+}
+
 table {
     border-spacing: 0;
     border-collapse: collapse;
+    width: 100%;
+    table-layout: fixed;
+    font-size: 0.9em;
+
+    th {
+        background: #f2f2f2;
+        height:3em;
+    }
+    
+    td {
+        height: 3em;
+        text-align: center;
+        border-bottom: 1px solid #eee;
+    }
+}
+
+.button {
+    position: relative;
+    display:inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size:0.9em;
+    height: 2.5em;
+    padding: 0 1.5em;
+    background:#999;
+    color:#fff;
+
+    &.delete {
+        background:#ff3636;
+    }
+
+    &.add {
+        width:2.5em;
+        text-indent: -9999px;
+        background:#fff;
+        color:#959595;
+        border:1px solid #aaa;
+        padding:0;
+        border-radius: 50%;
+        overflow: hidden;
+
+        &:before {
+            content:"";
+            display: block;
+            width:50%;
+            height:2px;
+            position: absolute;
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+            background:#959595;
+        }
+
+        &:after {
+            content:"";
+            display: block;
+            width:2px;
+            height:50%;
+            position: absolute;
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+            background:#959595;
+        }
+    }
+
+    &.cancel {
+        background:#fff;
+        color:#959595;
+        border:1px solid #aaa;
+    }
+
+    &.update {
+        background:#335cff;
+    }
+
+    &.submit {
+        background:#335cff;
+    }
 }
 
 #container {
@@ -61,6 +153,17 @@ table {
     .content-title {
         font-size:1.4em;
         text-align:center;
-        margin-bottom:1em;
+        margin-bottom:2em;
+        
+    }
+
+    .submit-layout {
+        text-align: center;
+        margin-top: 3em;
+
+        & > .button {
+            font-size:1em;
+            margin: 5px;
+        }
     }
 }
