--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -29,31 +29,13 @@
 
             dt {
                 width:150px;
+                .button {
+                    margin-top:0.5em;
+                }
             }
 
             dd {
                 width:calc(100% - 150px);
-                
-                table {
-                    width: 100%;
-                    table-layout: fixed;
-                    font-size: 0.9em;
-                    
-                    thead {
-                        th {
-                            background: #f2f2f2;
-                            height:2em;
-                        }
-                    }
-
-                    tbody {
-                        td {
-                            height: 2em;
-                            text-align: center;
-                            border-bottom: 1px solid #eee;
-                        }
-                    }
-                }
             }
         }
     }
