--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -40,3 +40,56 @@
         }
     }
 }
+
+#round-detail {
+    .round-member-header {
+        display:flex;
+        height:3em;
+        align-items: center;
+        justify-content: space-between;
+        font-weight:bold;
+        border-bottom: 1px solid #ddd;
+
+        & > span {
+            &:nth-child(1) {
+                width:10%;
+            }
+            &:nth-child(2) {
+                width:30%;
+            }
+            &:nth-child(3) {
+                width:20%;
+            }
+            &:nth-child(4) {
+                width:40%;
+            }
+        }
+    }
+
+    .round-member-data {
+        display:flex;
+        height:3em;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid #ddd;
+        
+        &:last-child {
+            border-bottom: 0;
+        }
+
+        & > span {
+            &:nth-child(1) {
+                width:10%;
+            }
+            &:nth-child(2) {
+                width:30%;
+            }
+            &:nth-child(3) {
+                width:20%;
+            }
+            &:nth-child(4) {
+                width:40%;
+            }
+        }
+    }
+}
