--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -1,31 +1,118 @@
+@import './theme.scss';
+
+#header {
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    height:4em;
+    background:#000;
+    color:#fff;
+    z-index: 10;
+
+    .inner {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding:0 1em;
+        height: 100%;
+        max-width:1600px;
+        margin:0 auto;
+    }
+
+    h1 {
+        font-size:1.4em;
+    }
+
+    a {
+        color:rgba(255,255,255,.8);
+    }
+}
+
+#footer {
+    position: absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    height:4em;
+    background:#000;
+    color:rgba(255,255,255,.8);
+
+    .inner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding:0 1em;
+        height: 100%;
+        max-width:1600px;
+        margin:0 auto;
+    }
+
+    p {
+        font-size:0.9em;
+    }
+}
+
+#container {
+    width:calc(100% - 3em);
+    max-width: 1600px;
+    margin:0 auto;
+    margin-top:7em;
+    background:#fff;
+    padding:3em;
+    box-shadow: 0.15vw 0.15vw 0.5vw rgba(0,0,0,.2);
+    margin-bottom: 3em;
+    border-radius: 0.5em;
+
+    @media all and (max-width:640px){
+        padding: 3em 1.5em;
+    }
+
+    .content-title {
+        font-size:1.4em;
+        text-align:center;
+        margin-bottom:2em;
+        
+    }
+
+    .submit-layout {
+        text-align: center;
+        margin-top: 3em;
+
+        & > .button {
+            margin: 5px;
+        }
+    }
+}
+
+
 #auth {
     text-align: center;
 
-    & > p {
-        font-size: 1.4em;
-        letter-spacing: -0.5px;
-        margin-bottom: 1em;
-    }
-
     & > form {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: stretch;
+        max-width: 250px;
+        margin:0 auto;
 
         button {
-            background:#505050;
-            padding: 0 1em;
-            color:#fff;
-            font-weight: bold;
+            margin-top:0.25em;
         }
     }
 }
 
 #admin {
     .list {
+        display:flex;
         dl {
             display:flex;
-            margin-bottom: 3em;
+            margin-left:3em;
+            width:50%;
+
+            &:nth-child(1) {
+                margin-left:0;
+            }
 
             dt {
                 width:150px;
@@ -36,6 +123,40 @@
 
             dd {
                 width:calc(100% - 150px);
+            }
+        }
+
+        @media all and (max-width:640px){
+
+            & {
+                flex-direction: column;
+            }
+
+            dl {
+                width:100%;
+                flex-flow: row wrap;
+                margin-left:0;
+                margin-top: 3em;
+
+                &:nth-child(1) {
+                    margin-top:0;
+                }
+
+                dt {
+                    display:flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    width:100%;
+                    padding-bottom:1em;
+
+                    br {
+                        display:none;
+                    }
+                }
+
+                dd {
+                    width:100%;
+                }
             }
         }
     }
@@ -74,7 +195,49 @@
     }
 }
 
+#member-list {
+    @media all and (max-width:640px) {
+        th:nth-child(1) {
+            display:none;
+        }
+        th:nth-child(3) {
+            width:140px;
+        }
+        th:nth-child(4) {
+            width:75px
+        }
+
+        td:nth-child(1) {
+            display:none;
+        }
+    }
+}
+
+#round-list {
+    a[class^=type] {
+        display:inline-block;
+        font-size:0.9em;
+        word-break: keep-all;
+    }
+}
+
 #round-detail {
+
+    @media all and (min-width:641px){
+
+        .react-datepicker-wrapper {
+            width:auto;
+        }
+    
+        .react-datepicker__input-container {
+            width:auto;
+        }
+    
+        .react-datepicker__tab-loop {
+            display:inline-block;
+        }
+    }
+
     .round-member-header {
         display:flex;
         min-height:3em;
@@ -96,7 +259,23 @@
             &:nth-child(4) {
                 width:40%;
             }
+            
+            @media all and (max-width:640px) {
+                &:nth-child(1) {
+                    display:none;
+                }
+                &:nth-child(2) {
+                    width:40%;
+                }
+                &:nth-child(3) {
+                    width:20%;
+                }
+                &:nth-child(4) {
+                    width:40%;
+                }
+            }
         }
+        
     }
 
     .round-member-data {
@@ -116,11 +295,11 @@
                 font-weight: bold;
             }
             &.state1 {
-                color:#2d71ca;
+                color:$blue;
             }
 
             &.state2 {
-                color:#f44336;
+                color:$red;
             }
 
             &:nth-child(1) {
@@ -134,6 +313,21 @@
             }
             &:nth-child(4) {
                 width:40%;
+            }
+
+            @media all and (max-width:640px) {
+                &:nth-child(1) {
+                    display:none;
+                }
+                &:nth-child(2) {
+                    width:40%;
+                }
+                &:nth-child(3) {
+                    width:20%;
+                }
+                &:nth-child(4) {
+                    width:40%;
+                }
             }
         }
     }
