--- a/src/res/css/base.scss
+++ b/src/res/css/base.scss
@@ -1,5 +1,29 @@
-@import url('//fonts.googleapis.com/earlyaccess/notosanskr.css');
+// @import url('//fonts.googleapis.com/earlyaccess/notosanskr.css');
 @import './theme.scss';
+
+@font-face {
+    font-family: "Gmarket";
+    font-style: normal;
+    font-weight: 100;
+    src: url('../font/GmarketSansLight.woff') format("woff"),
+    url('../font/GmarketSansLight.otf') format("opentype");
+}
+
+@font-face {
+    font-family: "Gmarket";
+    font-style: normal;
+    font-weight: 400;
+    src: url('../font/GmarketSansMedium.woff') format("woff"),
+    url('../font/GmarketSansMedium.otf') format("opentype");
+}
+
+@font-face {
+    font-family: "Gmarket";
+    font-style: normal;
+    font-weight: 700;
+    src: url('../font/GmarketSansBold.woff') format("woff"),
+    url('../font/GmarketSansBold.otf') format("opentype");
+}
 
 * {
     padding: 0;
@@ -14,7 +38,7 @@ body {
     font-weight: 400;
     font-style: normal;
     color:#333;
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Gmarket', sans-serif;
     background: #f8f9fb;
     line-height: 1.3;
     padding-bottom:4em;
@@ -109,7 +133,7 @@ table {
     align-items: center;
     font-size:0.85em;
     height: 2.5em;
-    padding: 0 1em;
+    padding: 0.1em 1em 0;
     background:#999;
     color:#fff;
     border-radius: 0.3em;
