--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -7,7 +7,6 @@
     right:0;
     height:4em;
     background:#000;
-    color:#fff;
     z-index: 10;
 
     .inner {
@@ -18,14 +17,19 @@
         height: 100%;
         max-width:1600px;
         margin:0 auto;
-    }
 
-    h1 {
-        font-size:1.4em;
-    }
+        h1 {
+            a {
+                color:#fff;
+                font-size:1.4rem;
+            }
+        }
 
-    a {
-        color:rgba(255,255,255,.8);
+        div {
+            a {
+                color:rgba(255,255,255,.8);
+            }
+        }
     }
 }
 
@@ -164,7 +168,7 @@
 
 #round-list {
     [class^=type] {
-        padding: 0.25em 0.5em;
+        padding: 0.5em 0.5em 0.25em;
         border-radius: 0.3em;
         background:#505050;
         color:#fff;
