--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -256,17 +256,29 @@
         font-weight:bold;
         border-bottom: 1px solid #ddd;
 
+        @media all and (max-width:640px){
+            & {
+                display: none;
+            }
+        }
+
         & > span {
             &:nth-child(1) {
                 width:10%;
             }
             &:nth-child(2) {
-                width:30%;
-            }
-            &:nth-child(3) {
                 width:20%;
             }
+            &:nth-child(3) {
+                width:10%;
+            }
             &:nth-child(4) {
+                width:10%;
+            }
+            &:nth-child(5) {
+                width:10%;
+            }
+            &:nth-child(6) {
                 width:40%;
             }
             
@@ -275,12 +287,18 @@
                     display:none;
                 }
                 &:nth-child(2) {
-                    width:40%;
+                    width:30%;
                 }
                 &:nth-child(3) {
-                    width:20%;
+                    width:10%;
                 }
                 &:nth-child(4) {
+                    width:10%;
+                }
+                &:nth-child(5) {
+                    width:10%;
+                }
+                &:nth-child(6) {
                     width:40%;
                 }
             }
@@ -295,12 +313,22 @@
         justify-content: space-between;
         border-bottom: 1px solid #ddd;
         padding:0.5em;
+
+        @media all and (max-width:640px){
+            flex-flow: row wrap;
+        }
         
         &:last-child {
             border-bottom: 0;
         }
 
         & > span {
+            padding:0.2em;
+
+            & > input:not([type=checkbox]) {
+                width:100%;
+            }
+
             &[class^=state] {
                 font-weight: bold;
             }
@@ -316,13 +344,20 @@
                 width:10%;
             }
             &:nth-child(2) {
-                width:30%;
-            }
-            &:nth-child(3) {
                 width:20%;
             }
+            &:nth-child(3) {
+                width:10%;
+            }
             &:nth-child(4) {
+                width:10%;
+            }
+            &:nth-child(5) {
+                width:10%;
+            }
+            &:nth-child(6) {
                 width:40%;
+                text-align: left;
             }
 
             @media all and (max-width:640px) {
@@ -336,7 +371,19 @@
                     width:20%;
                 }
                 &:nth-child(4) {
-                    width:40%;
+                    width:20%;
+                }
+                &:nth-child(5) {
+                    width:20%;
+                }
+                &:nth-child(6) {
+                    width:100%;
+                    border-top:1px dashed #ddd;
+                    padding-top:1em;
+
+                    &:before {
+                        content:"비고 : ";
+                    }
                 }
             }
         }
