--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -33,6 +33,29 @@
     }
 }
 
+#navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3em;;
+
+    a {
+        display: flex;
+        height:3em;
+        align-items: center;
+        padding:0.2em 3em 0;
+        background:#f5f5f5;
+        border-radius:1.5em;
+        font-size:1em;
+        margin:0 0.5em;
+
+        &.active {
+            background:#000;
+            color:#fff;
+        }
+    }
+}
+
 #footer {
     position: absolute;
     bottom:0;
@@ -100,8 +123,12 @@
         max-width: 250px;
         margin:0 auto;
 
+        input {
+            border-radius: 1.25em;
+        }
+
         button {
-            margin-top:0.25em;
+            margin-top:0.5em;
         }
     }
 }
@@ -199,23 +226,20 @@
     }
 }
 
-#member-list {
-    @media all and (max-width:640px) {
-        th:nth-child(1) {
-            display:none;
-        }
-        th:nth-child(3) {
-            width:140px;
-        }
-        th:nth-child(4) {
-            width:75px
-        }
+// #member-list {
+//     @media all and (max-width:640px) {
+//         th:nth-child(1) {
+//             display:none;
+//         }
+//         th:nth-child(3) {
+//             width:140px;
+//         }
 
-        td:nth-child(1) {
-            display:none;
-        }
-    }
-}
+//         td:nth-child(1) {
+//             display:none;
+//         }
+//     }
+// }
 
 #round-list {
     a[class^=type] {
@@ -324,6 +348,18 @@
 
         & > span {
             padding:0.2em;
+
+            [class^=state] {
+                font-weight: bold;
+            }
+
+            .state1 {
+                color:$blue;
+            }
+
+            .state2 {
+                color:$red;
+            }
 
             & > input:not([type=checkbox]) {
                 width:100%;
