UX 수정 및 블랙리스트 관리 추가

--- a/src/res/css/theme.scss
+++ b/src/res/css/theme.scss
@@ -1,2 +1,12 @@
 $red : #f44336;
 $blue : #2d71ca;
+
+@mixin button {
+    font-size: initial;
+    font-family: inherit;
+    border-radius: 0;
+    border:0;
+    background: none;
+    color:initial;
+    cursor: pointer;
+}
