--- a/src/res/css/base.scss
+++ b/src/res/css/base.scss
@@ -44,7 +44,7 @@ body {
     padding-bottom:4em;
 
     @media all and (max-width:640px){
-        font-size:16px;
+        font-size:14px;
     }
 }
 
@@ -84,13 +84,7 @@ input + label {
 }
 
 button {
-    font-size: initial;
-    font-family: inherit;
-    border-radius: 0;
-    border:0;
-    background: none;
-    color:initial;
-    cursor: pointer;
+    @include button;
 }
 
 ul,
@@ -111,6 +105,7 @@ table {
     width: 100%;
     table-layout: fixed;
     font-size: 0.9em;
+    word-break: break-all;
 
     th {
         background: #f2f2f2;
@@ -214,6 +209,10 @@ table {
 
 .point {
     color:$red;
+}
+
+.nowrap {
+    white-space: nowrap;
 }
 
 .custom-datepicker-button {
