--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -22,12 +22,20 @@
             a {
                 color:#fff;
                 font-size:1.4rem;
+
+                @media all and (max-width:640px){
+                    font-size:1.2rem;
+                }
             }
         }
 
         div {
             a {
                 color:rgba(255,255,255,.8);
+
+                @media all and (max-width:640px){
+                    font-size:0.8rem;
+                }
             }
         }
     }
@@ -48,10 +56,17 @@
         border-radius:1.5em;
         font-size:1em;
         margin:0 0.5em;
+        white-space: nowrap;
 
         &.active {
             background:#000;
             color:#fff;
+        }
+
+        @media all and (max-width:640px){
+            height:2.5em;
+            padding:0.2em 1.5em 0;
+            margin:0 0.25em;
         }
     }
 }
@@ -125,6 +140,7 @@
 
         input {
             border-radius: 1.25em;
+            text-align: center;
         }
 
         button {
@@ -134,6 +150,12 @@
 }
 
 #admin {
+
+    & > p {
+        color: $red;
+        text-align: center;
+    }
+
     .list {
         display:flex;
         dl {
@@ -195,8 +217,8 @@
 
 #round-list {
     [class^=type] {
-        padding: 0.5em 0.5em 0.25em;
-        border-radius: 0.3em;
+        padding: 0.5em 1em 0.25em;
+        border-radius: 1.5em;
         background:#505050;
         color:#fff;
 
@@ -393,7 +415,7 @@
             }
             &:nth-child(6) {
                 width:40%;
-                text-align: left;
+                // text-align: left;
             }
 
             @media all and (max-width:640px) {
@@ -417,9 +439,9 @@
                     border-top:1px dashed #ddd;
                     padding-top:1em;
 
-                    &:before {
-                        content:"비고 : ";
-                    }
+                    // &:before {
+                    //     content:"비고 : ";
+                    // }
                 }
             }
         }
