--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -478,6 +478,7 @@
         padding:40px;
         background:#fff;
         text-align: center;
+        box-shadow: 0 0 15px rgba(0,0,0,0.15);
     }
 
     .view-title {
