--- a/src/res/css/style.scss
+++ b/src/res/css/style.scss
@@ -380,6 +380,11 @@
         & > span {
             padding:0.2em;
 
+            input[type=checkbox] {
+                width: 1.5em;
+                height: 1.5em;
+            }
+
             [class^=state] {
                 font-weight: bold;
             }
